# llm_notch

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
crates/notch-adapters/claude-code/: Cargo.toml
crates/notch-adapters/claude-code/src/: capabilities.rs  health.rs  lib.rs  merge.rs  normalize.rs  response.rs  template.rs  version.rs
crates/notch-adapters/codex/: Cargo.toml
crates/notch-adapters/codex/src/: capabilities.rs  health.rs  lib.rs  merge.rs  normalize.rs  response.rs  template.rs  version.rs
crates/notch-adapters/cursor/: Cargo.toml
crates/notch-adapters/cursor/src/: capabilities.rs  health.rs  lib.rs  merge.rs  normalize.rs  response.rs  template.rs  version.rs
crates/notch-adapters/cursor/tests/: fixtures.rs
crates/notch-adapters/generic/: Cargo.toml
crates/notch-adapters/generic/src/: capabilities.rs  examples.rs  lib.rs  protocol.rs
crates/notch-agent-catalog/: Cargo.toml
crates/notch-agent-catalog/src/: lib.rs
crates/notch-connectors/: Cargo.toml
crates/notch-connectors/src/: adapter.rs  apply.rs  atomic.rs  detect.rs  diff.rs  error.rs  executable.rs  hash.rs  health.rs  journal.rs  lib.rs  lock.rs  manager.rs  merge.rs  path_security.rs  plan.rs  preview.rs  process_scan.rs  remove.rs  repair.rs  rollback.rs
crates/notch-connectors/tests/: connector_manager.rs
crates/notch-core/: Cargo.toml
crates/notch-core/src/: alerts.rs  app_core.rs  constants.rs  error.rs  lib.rs  registry.rs  stream.rs  traits.rs
crates/notch-core/src/domain/: ingest.rs  mod.rs  transitions.rs  validation.rs
crates/notch-core/src/persistence/: migrations.rs  mod.rs  sqlite.rs
crates/notch-decision/: Cargo.toml
crates/notch-decision/src/: adapter.rs  broker.rs  lib.rs  migration.rs  store.rs  types.rs
crates/notch-hook/: Cargo.toml
crates/notch-hook/src/: decision.rs  main.rs
crates/notch-ipc/: Cargo.toml
crates/notch-ipc/src/: auth.rs  client.rs  collector.rs  descriptor.rs  error.rs  framing.rs  lib.rs  limits.rs  normalize.rs  rate.rs  security.rs  server.rs  spool.rs  wire.rs
crates/notch-ipc/src/platform/: mod.rs  unix.rs  windows.rs
crates/notch-metrics/: Cargo.toml
crates/notch-metrics/src/: aggregate.rs  bridge.rs  constants.rs  graph.rs  history.rs  lib.rs  limitations.rs  model.rs  sampler.rs  sysinfo_adapter.rs
crates/notch-platform/: Cargo.toml
crates/notch-platform/src/: hwnd_collector.rs  lib.rs  macos.rs  stub.rs  types.rs  windows.rs  wt_collector.rs
crates/notch-protocol/: Cargo.toml
crates/notch-protocol/bindings/: AdapterCapabilities.ts  AdapterObservationPaths.ts  AdapterResponsePaths.ts  AgentAggregate.ts  AgentSession.ts  AgentSource.ts  AppSnapshot.ts  AttentionCapability.ts  AttentionKind.ts  AttributionQuality.ts  BackupJournalEntry.ts  BackupJournalOperation.ts  ConnectorApplyError.ts  ConnectorApplyResult.ts  ConnectorErrorCode.ts  ConnectorFileApplyResult.ts  ConnectorFileOutcome.ts  ConnectorFilePreview.ts  ConnectorHealthEntry.ts  ConnectorHealthReport.ts  ConnectorJournalEntry.ts  ConnectorPlanPreview.ts  ConnectorScope.ts  ConnectorUserStatus.ts  ContextOpenTier.ts  DecisionDeliveryState.ts  DecisionKind.ts  DecisionRequest.ts  DecisionResponse.ts  DecisionResponseAction.ts  DecisionResponseRecord.ts  EventLevel.ts  ExternalTrustAction.ts  ExternalTrustActionKind.ts  HealthProbeAxis.ts  HealthProbeFailureKind.ts  HealthProbeOutcome.ts  HealthProbeResult.ts  HostMetricSample.ts  IoQuality.ts  (+22 more)
crates/notch-protocol/src/: connector.rs  constants.rs  decision.rs  health.rs  lib.rs  migration.rs  purge.rs  types.rs
crates/notch-remote/: Cargo.toml
crates/notch-remote/src/: config.rs  deploy.rs  deploy_exec.rs  event_spool.rs  hook_ingest.rs  lib.rs  process.rs  protocol.rs  reconnect.rs  relay_artifact.rs  session.rs  transport.rs
crates/notch-remote/tests/: relay_lifecycle.rs
crates/notch-services/: Cargo.toml
crates/notch-services/src/: lib.rs  quota.rs  sound_pack.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  tauri.windows.signed.conf.json  windows-test.manifest.xml
src-tauri/capabilities/: dashboard.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: acknowledge_attention.toml  apply_connector_change.toml  connector_health.toml  detect_connectors.toml  execute_remote_deploy.toml  get_history.toml  get_remote_backend_status.toml  get_remote_connection_status.toml  get_session_events.toml  get_settings.toml  get_sound_themes.toml  import_sound_pack.toml  integration_health.toml  list_agent_catalog.toml  list_connector_backups.toml  list_displays.toml  list_pending_decisions.toml  list_quota_snapshots.toml  list_remote_hosts.toml  open_dashboard.toml  open_session.toml  play_sound_event.toml  preview_connector_change.toml  preview_remote_deploy.toml  preview_sound_routing.toml  purge_history.toml  remove_connector.toml  remove_remote_host.toml  repair_connector.toml  rollback_connector.toml  set_overlay_mode.toml  set_startup_enabled.toml  start_remote_relay.toml  stop_remote_relay.toml  submit_decision.toml  subscribe_stream.toml  unsubscribe_stream.toml  upsert_remote_host.toml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: bootstrap.rs  catalog.rs  context.rs  decision.rs  error.rs  integration.rs  mod.rs  overlay.rs  remote.rs  services.rs  settings.rs  types.rs  validation.rs
src-tauri/src/context/: activate.rs  locator.rs  mod.rs  resolve.rs  tier.rs
src-tauri/src/runtime/: helper_path.rs  integrations_dir.rs  mod.rs  relay_path.rs
src-tauri/src/services/: alerts.rs  autostart.rs  global_shortcut.rs  mod.rs  quota.rs  remote.rs  remote_supervisor.rs  sound_theme.rs  tray.rs
src-tauri/src/stream/: hub.rs  mod.rs
src-tauri/src/window/: coordinator.rs  error.rs  geometry.rs  macos.rs  mod.rs  stub.rs  types.rs  windows.rs
src-tauri/tests/: native_macos.rs  native_windows.rs  remote_registry.rs  services_contract.rs
(+304 files in other folders)
