[workspace]
resolver = "3"
members = [
    "crates/notch-protocol",
    "crates/notch-core",
    "crates/notch-metrics",
    "crates/notch-ipc",
    "crates/notch-hook",
    "crates/notch-adapters/cursor",
    "src-tauri",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["llm_notch"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/llm-notch/llm_notch"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
anyhow = "1.0.103"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
ts-rs = { version = "12.0.1", default-features = false, features = ["chrono-impl", "uuid-impl"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-trait = "0.1.89"
parking_lot = "0.12.5"
sysinfo = { version = "0.39.6", default-features = false, features = ["disk", "system"] }
rusqlite = { version = "0.40.1", default-features = false }
interprocess = { version = "2.4.2", features = ["tokio"] }
governor = "0.10.4"
rand = "0.10.2"
base64 = "0.22.1"
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4.3"
directories = "6.0.0"
tempfile = "3.27.0"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "socket", "user"] }
bytes = "1.12.1"
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["codec", "io-util"] }
crossbeam-channel = "0.5.16"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-build = { version = "2.6.3", features = [] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-autostart = "2.5.1"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSPanel",
    "NSRunningApplication",
    "NSScreen",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

notch-protocol = { path = "crates/notch-protocol" }
notch-core = { path = "crates/notch-core" }
notch-metrics = { path = "crates/notch-metrics" }
notch-ipc = { path = "crates/notch-ipc" }
notch-adapters-cursor = { path = "crates/notch-adapters/cursor" }
