[package]
name = "notch-agent-catalog"
description = "Extensible agent integration catalog for LLM Notch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
