[package]
name = "notch-decision"
description = "Interactive decision broker for llm_notch hook permission and approval flows"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notch-protocol.workspace = true
notch-adapters-claude-code.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
parking_lot.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[target.'cfg(not(windows))'.dependencies]
rusqlite = { workspace = true, features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { workspace = true, features = ["bundled-windows"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
