[package]
name = "notch-hook"
description = "External hook helper binary for agent process attribution"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "llm-notch-hook"
path = "src/main.rs"

[dependencies]
notch-protocol.workspace = true
notch-ipc.workspace = true
notch-platform.workspace = true
notch-adapters-claude-code.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
uuid.workspace = true
chrono.workspace = true
directories.workspace = true

[dev-dependencies]
notch-remote.workspace = true
tempfile.workspace = true
