[package]
name = "notch-ipc"
description = "Inter-process transport between hook helper and desktop host"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notch-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
interprocess.workspace = true
governor.workspace = true
tokio = { workspace = true, features = ["io-util", "fs", "sync", "time", "rt"] }
tracing.workspace = true
parking_lot.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
uuid = { workspace = true, features = ["v4"] }
directories.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
libc = { workspace = true, optional = true }
nix = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix = { workspace = true, features = ["fs", "user"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
