[package]
name = "notch-protocol"
description = "Frozen wire contracts shared across native llm_notch components"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
ts-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true
