[package]
name = "notch-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "llm-notch-relay"
path = "src/bin/llm-notch-relay.rs"

[dependencies]
notch-protocol.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
notch-protocol.workspace = true
tempfile.workspace = true
