[package]
name = "notch-adapters-codex"
description = "Codex hooks adapter: version detection, event normalization, templates"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notch-protocol.workspace = true
notch-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
