[package]
name = "notch-adapters-cursor"
description = "Cursor hooks adapter: version detection, merge specs, event normalization"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notch-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
